# Thamnel-Graphic-Client

./: .gitignore  Cargo.toml  GC_Core_Plan.md  GC_GUI_Plan.md  GUI_Phase.md  GUI_Works.md  README.md  TGC_Master_Plan.md  build-exe.bat  changes.txt  correct_path.md  migration_plan.md  package-lock.json  package.json  run-dev.bat
crates/thamnel-core/: Cargo.toml
crates/thamnel-core/src/: blend.rs  commands.rs  document.rs  effects.rs  fill.rs  geometry.rs  history.rs  hit_test.rs  identity.rs  lib.rs  node.rs  shape.rs  text.rs  transform.rs
crates/thamnel-effects/: Cargo.toml
crates/thamnel-render/: Cargo.toml
crates/thamnel-render/src/: backend.rs  compositor.rs  conversions.rs  effect_pipeline.rs  engine.rs  export.rs  hit_test.rs  lib.rs  shape_render.rs  text_render.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  document_bridge.rs  lib.rs  main.rs  render_bridge.rs  settings.rs
src/bridge/: documentBridge.ts  renderBridge.ts
src/commands/: aiCommands.ts  alignCommands.ts  arrangeCommands.ts  editCommands.ts  fileCommands.ts  groupCommands.ts  layerCommands.ts  transformCommands.ts  types.ts  useCommand.ts  videoCommands.ts  viewCommands.ts
src/data/: canvasPresets.ts
src/engine/: blendModes.ts  compositor.ts  effectsEngine.ts  index.ts  layerRenderer.ts  shapeRenderer.ts  textRenderer.ts
src/hooks/: ShortcutManager.ts  useBlurBrushTool.ts  useCanvasInteraction.ts  useClipboard.ts  useDraggable.ts  useEraserTool.ts  useGpuRenderer.ts  useKeyboardShortcuts.ts  useSelectionManager.ts  (+3 more)
(+187 files in other folders)
