[package]
name = "thamnel-graphics-editor"
version = "0.1.0"
description = "Thamnel Graphics Editor - Newsroom photocard production tool"
authors = ["Kamrul Islam Rubel"]
edition = "2021"

[lib]
name = "thamnel_graphics_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
uuid = { version = "1", features = ["v4"] }
