[package]
name = "thamnel-core"
version = "0.1.0"
edition = "2021"
description = "Core document model, geometry, identity, and command system for Thamnel Graphics Editor"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
