[package]
name = "thamnel-render"
version = "0.1.0"
edition = "2021"

[dependencies]
thamnel-core = { path = "../thamnel-core" }
vello = "0.7"
kurbo = "0.13"
peniko = "0.6"
cosmic-text = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
wgpu = "27"
pollster = "0.4"
log = "0.4"
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
